RFC 206: Promise CT: Use assertSame to test expected Promise values